--- a/kilka.ipynb
+++ b/kilka.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -15,12 +15,12 @@
    "source": [
     "import re\n",
     "import os\n",
-    "import pandas as pd"
+    "import polars as pl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "77b606bdf84b313d",
    "metadata": {
     "ExecuteTime": {
